force-app/main/default/objects/custom_create390__c/custom_create390__c.object-meta.xml
<CustomObject>
    <label>Custom created object390</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects390</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>