force-app/main/default/objects/custom_create390__c/fields/custom_create_390field545__c.field-meta.xml
<CustomField>
    <fullName>custom_create_390field545__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 390field545</label>
    <type>Checkbox</type>
</CustomField>